# leptos-store

./: .dockerignore  .gitignore  AUTHORING.md  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  SKILL.md  SKILLS.md  context7.json
.github/workflows/: ci.yml  deploy-showcase.yml  release.yml
docs/skills/: 01-creating-a-store.md  02-feature-flags.md  03-async-actions.md  04-persistence.md  05-ssr-hydration.md  06-selectors.md  07-store-composition.md  08-middleware.md  09-csr-deployment.md  10-cache-invalidation.md  README.md  architecture-guide.md  troubleshooting.md
examples/auth-store-example/: Cargo.toml
examples/auth-store-example/src/: auth_store.rs  components.rs  lib.rs  main.rs
examples/composition-example/: Cargo.toml  README.md
examples/composition-example/src/: components.rs  lib.rs  main.rs  stores.rs
examples/composition-example/style/: main.css
examples/counter-example/: Cargo.toml
examples/counter-example/src/: components.rs  counter_store.rs  lib.rs  main.rs
examples/csr-example/: Cargo.toml
examples/csr-example/src/: lib.rs  main.rs
examples/csr-example/style/: main.css
examples/devtools-example/: Cargo.toml  README.md
examples/devtools-example/src/: components.rs  counter_store.rs  lib.rs  main.rs
examples/devtools-example/style/: main.css
examples/feature-flags-example/: Cargo.toml  README.md
examples/feature-flags-example/src/: components.rs  lib.rs  main.rs
examples/feature-flags-example/style/: main.css
examples/middleware-example/: Cargo.toml  README.md
examples/middleware-example/src/: components.rs  lib.rs  main.rs  middleware.rs  task_store.rs
examples/middleware-example/style/: main.css
examples/persistence-example/: Cargo.toml  README.md
examples/persistence-example/src/: components.rs  lib.rs  main.rs  notes_store.rs
examples/persistence-example/style/: main.css
examples/selectors-example/: Cargo.toml
examples/selectors-example/src/: lib.rs  main.rs
examples/selectors-example/style/: main.css
examples/showcase/: Cargo.toml
examples/showcase/src/: components.rs  demos.rs  lib.rs  main.rs  showcase_store.rs
examples/showcase/style/: main.css
examples/token-explorer-example/: Cargo.toml
examples/token-explorer-example/src/: components.rs  lib.rs  main.rs  token_store.rs
src/: async.rs  audit.rs  composition.rs  context.rs  coordination.rs  devtools.rs  hydration.rs  lib.rs  macros.rs  middleware.rs  persistence.rs  prelude.rs  selectors.rs  server.rs  store.rs
src/templates/: feature_flags.rs  mod.rs
worker/: index.js  package-lock.json  package.json  wrangler.toml
