[package]
name = "showcase"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "showcase"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", default-features = false }
leptos_actix = { version = "0.8", optional = true }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
leptos-store = { path = "../..", default-features = false }
serde = { version = "1.0", features = ["derive"] }

# Server dependencies
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

# Client dependencies
wasm-bindgen = { version = "=0.2.108", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["Window"], optional = true }

# Example crate dependencies (as libraries)
counter-example = { path = "../counter-example", default-features = false }
auth-store-example = { path = "../auth-store-example", default-features = false }
token-explorer-example = { path = "../token-explorer-example", default-features = false }
middleware-example = { path = "../middleware-example", default-features = false }
persistence-example = { path = "../persistence-example", default-features = false }
composition-example = { path = "../composition-example", default-features = false }
feature-flags-example = { path = "../feature-flags-example", default-features = false }
devtools-example = { path = "../devtools-example", default-features = false }
csr-example = { path = "../csr-example", default-features = false }
selectors-example = { path = "../selectors-example", default-features = false }

[features]
default = []
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:tokio",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-store/ssr",
    "leptos-store/middleware",
    "leptos-store/devtools",
    "leptos-store/templates",
    "leptos-store/persist-web",
    # Propagate ssr to all example crates
    "counter-example/ssr",
    "auth-store-example/ssr",
    "token-explorer-example/ssr",
    "middleware-example/ssr",
    "persistence-example/ssr",
    "composition-example/ssr",
    "feature-flags-example/ssr",
    "devtools-example/ssr",
    "csr-example/ssr",
    "selectors-example/ssr",
]
hydrate = [
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys",
    "leptos/hydrate",
    "leptos-store/hydrate",
    "leptos-store/middleware",
    "leptos-store/devtools",
    "leptos-store/templates",
    "leptos-store/persist-web",
    # Propagate hydrate to all example crates
    "counter-example/hydrate",
    "auth-store-example/hydrate",
    "token-explorer-example/hydrate",
    "middleware-example/hydrate",
    "persistence-example/hydrate",
    "composition-example/hydrate",
    "feature-flags-example/hydrate",
    "devtools-example/hydrate",
    "csr-example/hydrate",
    "selectors-example/hydrate",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.leptos]
output-name = "showcase"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3100"
reload-port = 3101
style-file = "style/main.css"
bin-features = ["ssr"]
lib-features = ["hydrate"]
hash-files = false
lib-profile-release = "release"
bin-profile-release = "release"
